# godot-rust-cli-upgrader

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs  upgrade.rs
src/utils/: config.rs  log.rs
tests/: test_utilities.rs  upgrade.rs
