[package]
name = "godot-rust-cli-upgrader"
version = "0.1.0"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
colored = "2.0.0"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"