[package]
name = "godot-rust-cli-upgrader"
version = "0.1.0"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
edition = "2018"
description = "A CLI tool to help you upgrade your Godot Rust CLI project between versions that introduce breaking changes."
documentation = "https://github.com/robertcorponoi/godot-rust-cli-upgrader/"
readme = "README.md"
homepage = "https://github.com/robertcorponoi/godot-rust-cli-upgrader/"
repository = "https://github.com/robertcorponoi/godot-rust-cli-upgrader/"
license = "MIT"
license-file = "LICENSE"
keywords = ["godot-rust-cli", "godot", "rust", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
colored = "2.0.0"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"